# skia-builder

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  Makefile  README.md  build-skia.py  build-viewer.py
.github/workflows/: build-skia.yml  create-xcframework.yml
example/: CMakeLists.txt  main-native-graphite.cpp  metal_surface_helper.h  metal_surface_helper.mm
patches/: dawn-build-config.patch  zlib-visionos-support.patch
